--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
-  <body></body>
+  <head>
+    <title>Recipies</title>
+    
+  
+  </head>
+  <body>
+  
+  </body>
 
 
 
