--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Index of Recipies</h1>
-    <a href="https://djinn0.github.io/germanpancakes"/>German Pancakes</a>
+    <a href="germanpancakes.html">German Pancakes</a>
   </body>
 
 
