--- a/germanpancakes.html
+++ b/germanpancakes.html
@@ -9,7 +9,7 @@
     
     <h1>German Pancakes</h1>
     <div id="picture">
-      <img src="GermanPancake.jpg" alt="a picture of me" style="width:800px;height:400px;">  
+      <img src="GermanPancake.jpg" alt="A german f***ing pancake" style="width:800px;height:400px;">  
     </div>
     
     <h2>Ingredients</h2>
