--- a/blackbeans.html
+++ b/blackbeans.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
   <html>
-    <head></head>
-    <body><body>
+    <head>
+      <title>
+        Black Beans & plantains
+      </title>  
+    </head>
+    <body>
+      
+    <body>
 </html>
