--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   
   </head>
   <body>
+     <ul class="Navigation Bar">
+        <li>home</li>
+        <li>new recipes</li>
+        <li>index</li>
+     </ul>
+    
     <h1>Index of Recipies</h1>
     <a href="germanpancakes.html">German Pancakes</a>
   
