--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="style.css" type="text/css" rel="stylesheet">
     -->
     <style>
-      .Navigation Bar {
+      .Navigation{
         list-style-type: none;
         margin: 0;
         padding: 0; }
@@ -18,7 +18,7 @@
     
   </head>
   <body>
-     <ul class="Navigation Bar">
+     <ul class="Navigation">
         <li>home</li>
         <li>new recipes</li>
         <li>index</li>
