--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   </head>
   <body>
      <ul class="Navigation">
-        <li>home</li>
-        <li>new recipes</li>
+        <li><a href="index.html">home<a></li>
+        <li><a href="new.html">new recipes<a></li>
         <li>index</li>
      </ul>
     
