--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
   <body>
      <ul class="navigation bar">
         <li class=navigation element><a href="index.html">home<a></li>
-        <li><a href="new.html">new recipes<a></li>
-        <li>index</li>
+        <li class="navigation element><a href="new.html">new recipes<a></li>
+        <li class="navigation element>index</li>
      </ul>
     
     <h1>Index of Recipies</h1>
