--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="style.css" type="text/css" rel="stylesheet">
     -->
     <style>
-      .navigation ul {
+      .navigation {
           list-style-type: none;
           margin: 0;
           padding: 0;
