--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       
       li a {
       display: block;
-      color: white;
+      color: red;
       text-align: center;
       padding: 6px 8px;
       text-decoration: none;
