--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       
       li a {
       display: block;
-      color: red;
+      color: white;
       text-align: center;
-      padding: 6px 8px;
+      padding: 2px 8px;
       text-decoration: none;
       }
       
