--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       display: block;
       color: white;
       text-align: center;
+      vertical-align: middle;
       padding: 4px 8px;
       text-decoration: none;
       }
