--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
      }
 
     li a {
-    display: block;
+    display: inline-block;
     color: white;
     text-align: center;
     padding: 8px 10px;
