--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
   </head>
   <body>
      <ul>
-        <li class="navigation"><a href="new.html">new recipes<a></li>
+       <li class="navigation"><a href="index.html">home</a></li> 
+       <li class="navigation"><a href="new.html">new recipes</a></li>
      </ul>
     
     <h1>Index of Recipies</h1>
