--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
      <ul>
        <li class="navigation"><a href="index.html">home</a></li> 
        <li class="navigation"><a href="new.html">new recipes</a></li>
-     </ul>
+       <li class="navigation"><a href="#dropdown">dropdown</a></li> 
+    </ul>
     
     <h1>Index of Recipies</h1>
     <a href="germanpancakes.html">German Pancakes</a>
