--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     li a {
     display: inline-block;
-    color: red;
+    color: blue;
     text-align: center;
     padding: 8px 10px;
     text-decoration: none;
