--- a/index.html
+++ b/index.html
@@ -20,9 +20,17 @@
       vertical-align: middle; 
        }
 
-      li a {
+      .navigation1 a {
       display: inline-block;
-      color: white;
+      color: red;
+      text-align: center;
+      padding: 8px 10px;
+      text-decoration: none;
+      }
+      
+      .navigation2 a {
+      display: inline-block;
+      color: blue;
       text-align: center;
       padding: 8px 10px;
       text-decoration: none;
@@ -40,8 +48,8 @@
   </head>
   <body>
      <ul>
-       <li class="navigation"><a href="index.html">home</a></li> 
-       <li class="navigation"><a href="new.html">new recipes</a></li>
+       <li class="navigation1"><a href="index.html">home</a></li> 
+       <li class="navigation2"><a href="new.html">new recipes</a></li>
        
        <!--
        <li class="dropdown">
