--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
       vertical-align: middle; 
        }
 
-      li a {
+      .navigation-element a {
       display: inline-block;
-      color: white;
+      color: red;
       text-align: center;
       padding: 8px 10px;
       text-decoration: none;
