--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
       background-color: #333;
       }
 
-      li {
+      .navigation-element {
       float: left;
-      vertical-align: middle; 
+      
        }
 
       .navigation-element a {
       display: inline-block;
-      color: red;
+      color: white;
       text-align: center;
       padding: 8px 10px;
       text-decoration: none;
