--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       background-color: #333;
       }
 
-      .navigation-element {
+      .navigation-element li {
       float: left;
-      
+      vertical-align: middle; 
        }
 
       .navigation-element a {
