--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     
     <style>
       
-      ul {
+      .navigation-bar ul {
       list-style-type: none;
       margin: 0;
       padding: 0;
       overflow: hidden;
-      background-color: #333;
+      background-color: red;
       }
 
       .navigation-element li {
