--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <style>
       
-      .navigation-bar ul {
+      .navigation-bar {
       list-style-type: none;
       margin: 0;
       padding: 0;
@@ -18,7 +18,7 @@
       li {
       float: left;
       vertical-align: middle; 
-       }
+      }
 
       .navigation-element a {
       display: inline-block;
