--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
       margin: 0;
       padding: 0;
       overflow: hidden;
-      background-color: red;
+      background-color: #333;
       }
 
-      li {
+      .navigation-element {
       float: left;
       vertical-align: middle; 
       }
@@ -28,7 +28,7 @@
       text-decoration: none;
       }
       
-      li a:hover {
+      navigation-element a:hover {
       background-color: #111;
       }
       
