--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       }
       
       navigation-element a:hover {
-      background-color: #111;
+      background-color: white;
       }
       
    
