--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       text-decoration: none;
       }
       
-      navigation-element a:hover {
+      li a:hover {
       background-color: white;
       }
       
