--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       text-decoration: none;
       }
       
-      li a:hover {
-      background-color: white;
+      .navigation-element a:hover {
+      background-color: #111;
       }
       
    
