--- a/new.html
+++ b/new.html
@@ -18,7 +18,7 @@ li a, .dropbtn {
   display: inline-block;
   color: white;
   text-align: center;
-  padding: 14px 16px;
+  padding: 10px 8px;
   text-decoration: none;
 }
 
@@ -56,9 +56,10 @@ li.dropdown {
 </head>
 <body>
 
+<!-- Navigation Bar content -->  
 <ul>
-  <li><a href="#home">Home</a></li>
-  <li><a href="#news">News</a></li>
+  <li><a href="index.html">home</a></li>
+  <li>a href="new.html">new recipes</a></li>
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">Dropdown</a>
     <div class="dropdown-content">
@@ -69,8 +70,6 @@ li.dropdown {
   </li>
 </ul>
 
-<h3>Dropdown Menu inside a Navigation Bar</h3>
-<p>Hover over the "Dropdown" link to see the dropdown menu.</p>
 
 </body>
 </html>
