--- a/new.html
+++ b/new.html
@@ -59,7 +59,7 @@ li.dropdown {
 <!-- Navigation Bar content -->  
 <ul>
   <li><a href="index.html">home</a></li>
-  <li>a href="new.html">new recipes</a></li>
+  <li><a href="new.html">new recipes</a></li>
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">Dropdown</a>
     <div class="dropdown-content">
