--- a/new.html
+++ b/new.html
@@ -7,10 +7,10 @@
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: red;
+  background-color: #333;
 }
 
-navigation-element {
+.navigation-element {
   float: left;
 }
 
@@ -23,7 +23,7 @@ li a, .dropbtn {
 }
 
 li a:hover, .dropdown:hover .dropbtn {
-  background-color: red;
+  background-color: #111;
 }
 
 li.dropdown {
