--- a/new.html
+++ b/new.html
@@ -61,7 +61,7 @@ li.dropdown {
   <li class="navigation-element"><a href="index.html">Home</a></li>
   <li class="navigation-element"><a href="new.html">New Recipes</a></li>
   <li class="dropdown">
-    <a href="javascript:void(0)" class="dropbtn">Dropdown</a>
+    <a href="#" class="dropbtn">Dropdown</a>
     <div class="dropdown-content">
       <a href="#">Link 1</a>
       <a href="#">Link 2</a>
@@ -70,6 +70,40 @@ li.dropdown {
   </li>
 </ul>
 
+<p>
+  1<br>
+  2<br>
+  3<br>
+  4<br>
+  5<br>
+  6<br>
+  7<br>
+  8<br>
+  9<br>
+  10<br>
+  11<br>
+  12<br>
+  13<br>
+  14<br>
+  15<br>
+  16<br>
+  17<br>
+  18<br>
+  19<br>
+  20<br>
+  21<br>
+  22<br>
+  23<br>
+  24<br>
+  25<br>
+  26<br>
+  27<br>
+  28<br>
+  29<br>
+  30<br>
+  
+  
+</p>
 
 </body>
 </html>
