--- a/new.html
+++ b/new.html
@@ -8,7 +8,10 @@
   padding: 0;
   overflow: hidden;
   background-color: #333;
-}
+  position: fixed;
+  top: 0;
+  width: 100%;
+  }
 
 .navigation-element {
   float: left;
