--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@ li.dropdown {
       </div>
     </li>
   </ul>
+  
+  <div><br><br></div>
     
     <h1>Index of Recipies</h1>
     <a href="germanpancakes.html">German Pancakes</a>
