--- a/blackbeans.html
+++ b/blackbeans.html
@@ -1,11 +1,86 @@
 <!DOCTYPE html>
-  <html>
-    <head>
-      <title>
-        Black Beans & plantains
-      </title>  
-    </head>
-    <body>
-      
-    <body>
+<html>
+<head>
+<style>
+.navigation-bar {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  }
+
+.navigation-element {
+  float: left;
+}
+
+li a, .dropbtn {
+  display: inline-block;
+  color: white;
+  text-align: center;
+  padding: 10px 8px;
+  text-decoration: none;
+}
+
+li a:hover, .dropdown:hover .dropbtn {
+  background-color: #111;
+}
+
+li.dropdown {
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #333;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: white;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {background-color: #111;}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+</style>
+</head>
+<body>
+
+  <!-- Navigation Bar content -->  
+  <ul class="navigation-bar">
+    <li class="navigation-element"><a href="index.html">Home</a></li>
+    <li class="navigation-element"><a href="new.html">New Recipes</a></li>
+    <li class="dropdown">
+      <a href="#" class="dropbtn">Dropdown</a>
+      <div class="dropdown-content">
+        <a href="#">Link 1</a>
+        <a href="#">Link 2</a>
+        <a href="#">Link 3</a>
+      </div>
+    </li>
+  </ul>
+  
+  <div><br><br></div>
+    
+    <h1>Index of Recipies</h1>
+    <a href="germanpancakes.html">German Pancakes</a>
+  
+</body>
+
+
+
+
 </html>
