--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ li.dropdown {
   <!-- Navigation Bar content -->  
   <ul class="navigation-bar">
     <li class="navigation-element"><a href="index.html">Home</a></li>
-    <li class="navigation-element"><a href="blackbeans.html">Black Beans</a></li>
+    <li class="navigation-element"><a href="new.html">New Recipes</a></li>
     <li class="dropdown">
       <a href="#" class="dropbtn">Dropdown</a>
       <div class="dropdown-content">
