--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <li class="dropdown">
       <a href="#" class="dropbtn">Dropdown</a>
       <div class="dropdown-content">
-        <a href="#">Link 1</a>
+        <a href="glossary.html">Glossary</a>
         <a href="#">Link 2</a>
         <a href="#">Link 3</a>
       </div>
