--- a/glossary.html
+++ b/glossary.html
@@ -54,7 +54,7 @@
     <div class="glossary-roux">
       <h3>Roux</h3>
       <p>A Roux is a thickening agent made by cooking together equal parts flour and fat. 
-      It is tradationaly made with butter in clasical french cuisine but it can also be made with vegtable oil or animal fat.
+      It is traditionally made with butter in clasical french cuisine but it can also be made with vegtable oil or animal fat.
       It is used as a base for sauces and gravies and to thicken soups</p>
     </div>
     
