--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <li class="dropdown">
       <a href="#" class="dropbtn">Dropdown</a>
       <div class="dropdown-content">
+        <a href="list.html">Recipe Index</a>
         <a href="glossary.html">Glossary</a>
-        <a href="#">Link 2</a>
         <a href="#">Link 3</a>
       </div>
     </li>
