--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <!-- Navigation Bar content -->  
   <ul class="navigation-bar">
-    <li class="navigation-element"><a href="index.html">Homestyle</a></li>
+    <li class="navigation-element"><a href="index.html">Home</a></li>
     <li class="navigation-element"><a href="new.html">New Recipes</a></li>
     <li class="dropdown">
       <a href="#" class="dropbtn">Dropdown</a>
