--- a/list.html
+++ b/list.html
@@ -8,13 +8,13 @@
 
   <!-- Navigation Bar content -->  
   <ul class="navigation-bar">
-    <li class="navigation-element"><a href="index.html">Homestyle</a></li>
+    <li class="navigation-element"><a href="index.html">Home</a></li>
     <li class="navigation-element"><a href="new.html">New Recipes</a></li>
     <li class="dropdown">
       <a href="#" class="dropbtn">Dropdown</a>
       <div class="dropdown-content">
+        <a href="list.html">Recipe Index</a>
         <a href="glossary.html">Glossary</a>
-        <a href="#">Link 2</a>
         <a href="#">Link 3</a>
       </div>
     </li>
@@ -22,7 +22,7 @@
   
   <div><br><br></div>
     
-    <h1>Index of Recipies</h1>
+    <h1>Index of Recipes</h1>
     <ul>
       <!--A-->
       <!--B-->
