style update of glossary

--- a/glossary.html
+++ b/glossary.html
@@ -13,8 +13,8 @@
       <li class="dropdown">
         <a href="#" class="dropbtn">Dropdown</a>
         <div class="dropdown-content">
-          <a href="#">Link 1</a>
-          <a href="#">Link 2</a>
+          <a href="list.html">Recipe Index</a>
+          <a href="glossary.html">Glossary</a>
           <a href="#">Link 3</a>
         </div>
       </li>
@@ -29,7 +29,7 @@
     <!--C-->
     <!--D-->
     
-    <div>
+    <div class="glossary-entry">
       <h3>Deglazing</h3>
       <p>Deglazing is a cooking technique for removing browned food residue from a pan. The cooked food (usually meat) is removed from the pan and excess fat is poured off.
       The pan is returned to the stove and a liquid such a stock or wine is poured into the hot pan loosening the food residue. The pan is scraped allowing the browned food
@@ -51,7 +51,7 @@
     <!--Q-->
     <!--R-->
     
-    <div class="glossary-roux">
+    <div class="glossary-entry">
       <h3>Roux</h3>
       <p>A Roux is a thickening agent made by cooking together equal parts flour and fat. 
       It is traditionally made with butter in clasical french cuisine but it can also be made with vegtable oil or animal fat.
