--- a/new.html
+++ b/new.html
@@ -12,14 +12,15 @@
   <li class="dropdown">
     <a href="#" class="dropbtn">Dropdown</a>
     <div class="dropdown-content">
-      <a href="#">Link 1</a>
-      <a href="#">Link 2</a>
+      <a href="list.html">Recipe Index</a>
+      <a href="glossary.html">Glossary</a>
       <a href="#">Link 3</a>
       <br><br>
     </div>
   </li>
 </ul>
   
+
   
 <!--  
 <p>
