--- a/germanpancakes.html
+++ b/germanpancakes.html
@@ -63,6 +63,7 @@
       
     </div>
     
+    <!--
     <script>
       let x = document.getElementById("recipe-block")
       x.addEventListener("mouseover", funct1)
@@ -78,8 +79,8 @@
         document.getElementById("recipe-block").style.fontSize = "24px";
       }
 
-    </script>
-
+    </script>*/
+  -->
 
 
     <h2>Ingredients</h2>
