--- a/jspractice.html
+++ b/jspractice.html
@@ -3,5 +3,18 @@
     <head>
     </head>
     <body>
+   
+      <button id="mybtn">click me</button>
+      <p id="demo"></p>
+
+      <script>
+        var x = document.getElementById("click", clickFunction)
+
+        function clickFunction() {
+          document.getElementById("demo").innerHTML += "I was clicked<br>";
+        }
+
+      </script>
+   
     </body>
    </html>
