generating recipe page for pupusas

--- a/list.html
+++ b/list.html
@@ -42,6 +42,7 @@
       <!--N-->
       <!--O-->
       <!--P-->
+      <li><a href="pupusa.html">Pupusas with Coleslaw and Salsa</a></li>
       <!--Q-->
       <!--R-->
       <!--S-->
