linked file to generate nav bar

--- a/jspractice.html
+++ b/jspractice.html
@@ -10,7 +10,7 @@
       <body>
         
         <div id="test"><p>hiya</p></div>
-        <script>hhh();</script>
+        <script>generateNavBar();</script>
         <h2>hello world</h2>
     </body>
    </html>
