streamlined function to generate nav bar

--- a/jspractice.html
+++ b/jspractice.html
@@ -9,7 +9,7 @@
     </head>
       <body>
         
-        <div id="test"><p>hiya</p></div>
+        <div id="navBarLoc"></div>
         <script>generateNavBar();</script>
         <h2>hello world</h2>
     </body>
