--- a/new.html
+++ b/new.html
@@ -1,24 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <script src="navigationbar.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 
-<!-- Navigation Bar content -->  
-<ul class="navigation-bar">
-  <li class="navigation-element"><a href="index.html">Home</a></li>
-  <li class="navigation-element"><a href="new.html">New Recipes</a></li>
-  <li class="dropdown">
-    <a href="#" class="dropbtn">Dropdown</a>
-    <div class="dropdown-content">
-      <a href="list.html">Recipe Index</a>
-      <a href="glossary.html">Glossary</a>
-      <a href="#">Link 3</a>
-      <br><br>
-    </div>
-  </li>
-</ul>
+<!-- Navigation Bar -->  
+<div id="navBarLoc"></div>
+<script>generateNavBar();</script>
   
 
   
