--- a/germanpancakes.html
+++ b/germanpancakes.html
@@ -86,6 +86,21 @@
        the pancake will rise twice to three times its original size but will colapse back into the pan when removed from the oven. Cut the pancake into slices and serve 
        with toppings of choice including powderded sugar and lemon juice, fruit with whipped cream, butter and maple syrup ect.</p>
     
+    <!--
+    <script>
+        var xx = document.getElementById("recipe-block");
+      xx.addEventListener("mouseover", funkx);
+      xx.addEventListener("mouseout", funkxx)
+      function funkx()
+      {
+        document.getElementById("recipe-block").style.fontSize = "48px";
+      }
+      function funkxx()
+      {
+        document.getElementById("recipe-block").style.fontSize = "24px";
+      }
+    </script>
+    -->
     
   </body>
 
