--- a/pupusa.html
+++ b/pupusa.html
@@ -3,6 +3,7 @@
   <head>
     <title>Pupusa</title>
     <script src="navigationbar.js"></script>
+    <script src="footer.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
       <style>
         
@@ -92,7 +93,7 @@
         <li>1 cup Shredded Carrots</li>
         <li>1/2 yellow onion, diced</li>
         <li>1 Jalapeño, diced </li>
-        <li>3 tsp kosher salt/li>
+        <li>3 tsp kosher salt</li>
         <li>1/2 cup apple cider vinegar</li>
         <li>1/4 cup Water</li>
         <li>a dash of dried Oregano</li>
@@ -101,6 +102,9 @@
     <p class="cookInstruct">
         Prepaire the Curtido a couple hours before the Pupusas and place in the fridge to allow the cabbage to adsorbe the vinegar and spices.
     </p>
+
+    <div id="footerLoc"></div>
+    <script>generateFooter();</script>
 
 </body>
 
