--- a/pupusa.html
+++ b/pupusa.html
@@ -36,6 +36,11 @@
           margin-left: 2%;
           width: 80%;
         }
+      
+        body{
+            margin: 0px;
+        }
+      
       </style>
   
   </head>
