--- a/list.html
+++ b/list.html
@@ -31,10 +31,11 @@
       <!--N-->
       <!--O-->
       <!--P-->
-      <li><a href="pupusa.html">Pupusas with Coleslaw and Salsa</a></li>
+        <li><a href="pupusa.html">Pupusas with Coleslaw and Salsa</a></li>
       <!--Q-->
       <!--R-->
       <!--S-->
+        <li><a href="stroganoff.html">Stroganoff</a></li>
       <!--T-->
       <!--U-->
       <!--V-->
