--- a/stroganoff.html
+++ b/stroganoff.html
@@ -1,1 +1,53 @@
+<!DOCTYPE html>
+  <html>
+    <head>
+      <title>Stroganoff</title>
+      <script src="navigationbar.js"></script>
+      <script src="footer.js"></script>
+      <link rel="stylesheet" type="text/css" href="style.css">
+      <style>
+        
 
+      </style>
+
+    </head>
+
+    <body>
+      <div class="main-container">
+        <!--Navigation Bar-->
+        <div id="navBarLoc"></div>
+        <script>generateNavBar();</script>  
+
+        <h1 class="recipe-title">Stroganoff</h1>
+        <div><img src="pupusa.jpg" alt="A Pupusa topped with coleslaw and salsa." class="picture"></div>
+
+        <ul class="recipe" >
+            <li>1/2 cup water</li>
+            <li>1 8oz package mushrooms, thinly sliced</li>
+            <li>2 cups beef broth or 2 bouillon cubes disolved in water </li>
+            <li>1 small onion, diced</li>
+            <li>2 cloves garlic, diced</li>
+            <li>10-20 frozen meatballs</li>
+            <li>3 cups egg noodles</li>
+            <li>2 tsp spicy mustard</li>
+            <li>1 tsp worcestershire sauce</li>
+            <li>Ground pepper to taste, approximatly 1-2 tsp</li>
+            <li>Thyme to taste, approximatly 1-2 tsp</li>
+            <li>Koshar salt to taste, approximatly 1-2 tsp</li>
+        </ul>
+
+        <p class="cookInstruct">Cook down the mushrooms with the diced onions and garlic in 1/2 cup water. Make a <i><a href="glossary.html#glossary-roux">roux</a></i> 
+        </p>
+
+
+        <!--Footer Bar-->
+        <div><br></div>
+        <div id="footerLoc"></div>
+        <script>generateFooter();</script>
+      </div>
+    </body>
+
+
+
+
+  </html>
