--- a/glossary.html
+++ b/glossary.html
@@ -41,7 +41,7 @@
     <!--Q-->
     <!--R-->
     
-    <div class="glossary-entry">
+    <div class="glossary-entry" id="glossary-roux">
       <h3>Roux</h3>
       <p>A Roux is a thickening agent made by cooking together equal parts flour and fat. 
       It is traditionally made with butter in clasical french cuisine but it can also be made with vegtable oil or animal fat.
