--- a/list.html
+++ b/list.html
@@ -4,6 +4,17 @@
 <head>
   <script src="navigationbar.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <style>
+    .rl{
+      background-color: aquamarine;
+      list-style-type: none;
+      width: 25%;
+      margin: 5px;
+      padding: 2px;
+      box-shadow: 4px 4px 2px #333
+    }
+
+  </style>
 </head>
 <body>
 
@@ -15,13 +26,13 @@
     <ul>
       <!--A-->
       <!--B-->
-        <li><a href="blackbeans.html">Black Beans and Plantains</a></li>
+        <li class="rl"><a href="blackbeans.html">Black Beans and Plantains</a></li>
       <!--C-->
       <!--D-->
       <!--E-->
       <!--F-->
       <!--G-->
-        <li><a href="germanpancakes.html">German Pancakes</a></li>
+        <li class="rl"><a href="germanpancakes.html">German Pancakes</a></li>
       <!--H-->
       <!--I-->
       <!--J-->
@@ -31,11 +42,12 @@
       <!--N-->
       <!--O-->
       <!--P-->
-        <li><a href="pupusa.html">Pupusas with Coleslaw and Salsa</a></li>
+        <li class="rl"><a href="pupusa.html">Pupusas with Coleslaw and Salsa</a></li>
       <!--Q-->
       <!--R-->
       <!--S-->
-        <li><a href="stroganoff.html">Stroganoff</a></li>
+        <li class="rl"><a href="SpaghettiCarbonara.html">Spaghetti Carbonara</a></li>
+        <li class="rl"><a href="stroganoff.html">Stroganoff</a></li>
       <!--T-->
       <!--U-->
       <!--V-->
