change slider switch size size

--- a/Slider.html
+++ b/Slider.html
@@ -3,8 +3,20 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
+    p {
+        font-size: 80px;
+
+    }
+    
+    .switch input {
+        opacity: 0;
+        width: 0;
+        height: 0;
+    }
+    
     .switch{
         position: relative;
+        vertical-align: -20px;
         display: inline-block;
         width: 60px;
         height: 34px;
@@ -45,9 +57,12 @@
 </style>
 </head>
 <body>
+    <p>Hello
     <label class="switch">
         <input type="checkbox" checked>
         <span class="slider"></span>
     </label>
+    world
+    </p>
 </body>
 </html> 
