--- a/test.html
+++ b/test.html
@@ -1,5 +1,18 @@
 <!DOCTYPE html>
   <html>
-  <head></head>
-  <body></body>
+    <head>
+      <script src="navBarSelector.js"></script>
+      <style id="navBarStyle1">
+        body{
+          margin: 0;
+          padding: 0;
+        }
+      </style>
+    </head>
+    <body>
+
+      <div id="navBarLoc"></div>
+      <script>generateSelectorNavBar();</script>
+
+    </body>
   </html>
