--- a/test.html
+++ b/test.html
@@ -2,17 +2,13 @@
   <html>
     <head>
       <script src="navBarSelector.js"></script>
-      <style id="navBarStyle1">
-        body{
-          margin: 0;
-          padding: 0;
-        }
-      </style>
+      <style></style>
     </head>
     <body>
-
-      <div id="navBarLoc"></div>
-      <script>generateSelectorNavBar();</script>
+      
+      <script>
+        generateSelectorNavBar();
+      </script>
 
     </body>
   </html>
