--- a/blackbeans.html
+++ b/blackbeans.html
@@ -3,10 +3,12 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <script src="navBarSelector.js"></script>
+  <style></style>
 </head>
 <body>
-
-  <!-- Navigation Bar content -->  
+  <script>generateSelectorNavBar();</script>
+  <!--   
   <ul class="navigation-bar">
     <li class="navigation-element"><a href="index.html">Homestyle</a></li>
     <li class="navigation-element"><a href="new.html">New Recipes</a></li>
@@ -19,14 +21,14 @@
       </div>
     </li>
   </ul>
-  
-  <div><br><br></div>
+  -->
+  <h1 class="recipe-title">Blackbeans with Plantains and Cream</h1>
+
+
     
-    <h1>Index of Recipies</h1>
-    <a href="germanpancakes.html">German Pancakes</a>
   
 </body>
-
+  
 
 
 
