--- a/test.html
+++ b/test.html
@@ -2,12 +2,14 @@
   <html>
     <head>
       <script src="navBarSelector.js"></script>
+      <script src="footer.js"></script>
       <style></style>
     </head>
     <body>
       
       <script>
         generateSelectorNavBar();
+        generateFooter();
       </script>
 
     </body>
