--- a/SpaghettiCarbonara.html
+++ b/SpaghettiCarbonara.html
@@ -3,7 +3,7 @@
     <head>
       <title>Carbonara</title>
       <script src="navBarSelector.js"></script>
-      <script src="footer.js"></script>
+      <script src="footer2.js"></script>
       <link rel="stylesheet" type="text/css" href="style.css">
         <style>
           
