--- a/pupusa.html
+++ b/pupusa.html
@@ -3,7 +3,7 @@
   <head>
     <title>Pupusa</title>
     <script src="navigationbar.js"></script>
-    <script src="footer.js"></script>
+    <script src="footer2.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
       <style>
         
@@ -92,7 +92,6 @@
         Prepaire the Curtido a couple hours before the Pupusas and place in the fridge to allow the cabbage to adsorbe the vinegar and spices.
     </p>
 
-    <div id="footerLoc"></div>
     <script>generateFooter();</script>
 
 </body>
