--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
   <html>
     <head>
       <script src="navBarSelector.js"></script>
-      <script src="footer.js"></script>
+      <script src="footer2.js"></script>
       <style></style>
     </head>
     <body>
