--- a/test.html
+++ b/test.html
@@ -3,7 +3,20 @@
     <head>
       <script src="navBarSelector.js"></script>
       <script src="footer2.js"></script>
-      <style></style>
+      <style>
+        /*
+        .footer-bar {
+          background-color: lightblue;
+          position: relative;
+          width: 100%;
+          bottom:0%;
+          list-style-type: none;
+          margin: 0;
+          padding: 0;
+        }*/
+
+
+      </style>
     </head>
     <body>
       
