--- a/shakshuka.html
+++ b/shakshuka.html
@@ -1,1 +1,18 @@
+<!DOCTYPE html>
+    <html>
+        <head>
+            <title>Shakshuka</title>
+            <script src="navBarSelector.js"></script>
+            <script src="footer2.js"></script>
+            <style></style>
+        </head>
+        <body>
+            <!-- Navigation Bar -->
+            <script>generateSelectorNavBar();</script>
+            
+            <h1 class="recipe-title">Shakshuka</h1>
+            <img src='shakshuka.jpg' class='picture'>
 
+        </body>
+
+    </html>
