--- a/shakshuka.html
+++ b/shakshuka.html
@@ -4,7 +4,12 @@
             <title>Shakshuka</title>
             <script src="navBarSelector.js"></script>
             <script src="footer2.js"></script>
-            <style></style>
+            <style>
+                 .picture {
+                    width: 40%;
+                    height: 40%;
+                }
+            </style>
         </head>
         <body>
             <!-- Navigation Bar -->
