--- a/glossary.html
+++ b/glossary.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <title>Glossary</title>
-    <script src="navigationbar.js"></script>
+    <script src="navBarSelector.js"></script>
+    <script src="footer2.js"></script>
+    <style></style>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
