add updated navbar and footer

--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script src="navigationbar.js"></script>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <script src="navBarSelector.js"></script>
+  <script src="footer2.js"></script>
+  <style>
+    body {
+      margin: 0;
+    }
+
+  </style>
+  
+  <!--<link rel="stylesheet" type="text/css" href="style.css">-->
 </head>
 <body>
 
   <!-- Navigation Bar content -->  
-  <div id="navBarLoc"></div>
-  <script>generateNavBar();</script>
-  
-  <div><br><br></div>
+
     
     <h1>Index of Recipies</h1>
     <a href="germanpancakes.html">German Pancakes</a>
