--- a/index.html
+++ b/index.html
@@ -7,17 +7,40 @@
     body {
       margin: 0;
     }
+    
+    .container {
+      position: relative;
+    }
+
+/* Bottom right text */
+    .text-block {
+      position: absolute;
+      top: 20px;
+      left: 20px;
+      color: white;
+    }
+
 
   </style>
   
+
   <!--<link rel="stylesheet" type="text/css" href="style.css">-->
 </head>
 <body>
 
-  <!-- Navigation Bar content -->  
+<div class="containte">
+  <img src="pupusa.jpg" style="height:40vh";>
+  <div class="text-block">
+    <h1>The Redd Recipe Repository</h1>
+
+  </div>
+</div> 
 
     
-    <h1>Index of Recipies</h1>
+
+
+
+    <h1></h1>
     <a href="germanpancakes.html">German Pancakes</a>
   
 </body>
