--- a/list.html
+++ b/list.html
@@ -21,6 +21,8 @@
       counter-reset: listCounter;
     }
 
+
+
     .rli{
       margin-bottom: 4px;
       background-color: rgb(222, 233, 248);
@@ -28,6 +30,12 @@
       font-size: 20px;
       border-radius: 5%;
     }
+
+    .rli:hover{
+      background-color: rgb(170, 198, 236);
+
+    }
+
 
     .rli a{
       text-decoration: none;
