--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       position: relative;
     }
 
-/* Bottom right text */
+/* Top right text */
     .text-block {
       position: absolute;
       top: 20px;
@@ -28,7 +28,7 @@
 </head>
 <body>
 
-<div class="containte">
+<div class="containter">
   <img src="pupusa.jpg" style="height:40vh";>
   <div class="text-block">
     <h1>The Redd Recipe Repository</h1>
