--- a/stroganoff.html
+++ b/stroganoff.html
@@ -2,8 +2,8 @@
   <html>
     <head>
       <title>Stroganoff</title>
-      <script src="navigationbar.js"></script>
-      <script src="footer.js"></script>
+      <script src="navBarSelector.js"></script>
+      <script src="footer2.js"></script>
       <link rel="stylesheet" type="text/css" href="style.css">
       <style>
         
@@ -13,10 +13,6 @@
     </head>
 
     <body>
-      <div class="main-container">
-        <!--Navigation Bar-->
-        <div id="navBarLoc"></div>
-        <script>generateNavBar();</script>  
 
         <h1 class="recipe-title">Stroganoff</h1>
         <div><img src="pupusa.jpg" alt="A Pupusa topped with coleslaw and salsa." class="picture"></div>
@@ -38,13 +34,7 @@
 
         <p class="cookInstruct">Cook down the mushrooms with the diced onions and garlic in 1/2 cup water. Make a <i><a href="glossary.html#glossary-roux">roux</a></i> 
         </p>
-
-
-        <!--Footer Bar-->
-        <div><br></div>
-        <div id="footerLoc"></div>
-        <script>generateFooter();</script>
-      </div>
+    
     </body>
 
 
