--- a/list.html
+++ b/list.html
@@ -47,7 +47,8 @@
 
     .rli a{
       text-decoration: none;
-      background-color: rgb(222, 233, 248);
+      background-color:#333;
+      color:white;
       display: inline-block;
       width: 350px;
       padding: 4px;
@@ -69,13 +70,13 @@
     .rli:before{  
       counter-increment: listCounter;
       content: counter(listCounter);
-      background: aquamarine;
+      background: #333;
       color: white;
       border-radius: 100%;
       width: 1.2em;
       text-align: center;
       display: inline-block;
-      box-shadow: 6px 6px 3px lightgray;
+      /*box-shadow: 6px 6px 3px lightgray;*/
       font-size: 20px;
     }
 
