--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       right: 75px;
       color: white;
       font-size: 45px;
+      font-family:Arial, Helvetica, sans-serif Tahoma, sans-serif;
     }
 
     .q{
@@ -45,7 +46,7 @@
   </div>
 </div> 
 
-<p class='q'>"Cooking is like love. It should be entered into with abandon or not at all."<i> Harriet van Horne</i></p>   
+<p class='q'><br>"Cooking is like love. It should be entered into with abandon or not at all."<i> Harriet van Horne</i></p>   
 
 
 
