--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             position: absolute;
             top: 15px;
             right: 75px;
-            color: white;
+            color: blue;
             font-size: 45px;
             font-family:Arial, Helvetica, sans-serif Tahoma, sans-serif;
           
