--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
             position: absolute;
             top: 15px;
             right: 75px;
-            color: blue;
+            color: red;
             font-size: 45px;
             font-family:Arial, Helvetica, sans-serif Tahoma, sans-serif;
           
           }
 
-          @media only screen and (max-width: 800px){
+          @media only screen and (max-width: 1000px){
             .q{ 
               font-size: 24px;
               text-align: center;
@@ -61,7 +61,7 @@
       
       <script>
         var x = document.getElementById('pic1');
-        if (window.innerWidth < 800){
+        if (window.innerWidth < 1000){
           x.src = 'plateLogo2.jpg';
         } 
         else{
