--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
               z-index: 4;
               position: fixed;
               font-size: 55px;
-              top: 100px;
-              left: 10px;
+              top: 12%;
+              left: 2%;
               font-family:Arial, Helvetica, sans-serif Tahoma, sans-serif;
             
             }
