updates for mobile display

--- a/TuscanTortelliniSoup.html
+++ b/TuscanTortelliniSoup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>German Pancakes</title>
+    <title>Creamy Tuscan Tortellini Soup</title>
     <script src="navBarSelector.js"></script>
     <script src="footer2.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -24,10 +24,27 @@
 
       <h2>Ingredients</h2>
       <ul class="recipe" id="recipe-block-tuscan-tortellini-soup">
-
+        <li>2 Tbs Butter</li>
+        <li>1 small white onion (sliced)</li>
+        <li>3 cloves garlic (minced)</li>
+        <li>4 Cups Chicken broth</li>
+        <li>1 Large Can (~3.5 cups) diced tomatos </li>
+        <li>1 Can (~2 cups) white beans (drained)</li>
+        <li>1 Cup heavy cream</li>
+        <li>1/4 Cup Parmesan cheese</li>
+        <li>1 Tbsp Italian seasoning</li>
+        <li>1 Tsp Kosher Salt</li>
+        <li>1/2 Tsp Ground Pepper</li>
+        <li>2 Cups Chicken (Cooked and Shredded) </li>
+        <li>9 Ounce refrigerated tortellini</li>
+        <li>2 Cups Spinach (Chopped)</li>
       </ul>
 
-      
+      <p class="cookInstruct">
+        Melt the butter in a large pot at medium heat. Sautee garlic and onions until tender. Add tomatos, chicken broth, white beans, cream, and Parmesan. 
+        Bring to a simmer. Add Italian seasoning, salt, and pepper. Add Chicken and tortellini, simmer for 10 min to allow the soup to thicken and the tortellini to cook. 
+        Add spinach cook for 1 min. Serve hot and enjoy.  
+      </p>
   
     
   
