--- a/glossary.html
+++ b/glossary.html
@@ -36,7 +36,7 @@
     <!--C-->
     <!--D-->
     
-    <div class="glossary-entry">
+    <div class="glossary-entry" id="glossary-deglazing">
       <h3>Deglazing</h3>
       <p>Deglazing is a cooking technique for removing browned food residue from a pan. The cooked food (usually meat) is removed from the pan and excess fat is poured off.
       The pan is returned to the stove and a liquid such a stock or wine is poured into the hot pan loosening the food residue. The pan is scraped allowing the browned food
