--- a/list.html
+++ b/list.html
@@ -128,6 +128,7 @@
           <!--S-->
             <li class='rli' id='spaghetticarbonara'><a href='SpaghettiCarbonara.html'> Spaghetti Carbonara</a></li>
             <li class='rli' id='stroganoff'><a href='stroganoff.html'> Stroganoff</a></li>
+            <li class='rli' id='swedishMeatballs'><a href='swedishMeatballs.html'> Swedish Meatballs</a></li>
           <!--T-->
             <li class='rli' id='TuscanTortelliniSoup'><a href='TuscanTortelliniSoup.html'>Creamy Tuscan Tortellini Soup</a></li>
           <!--U-->
@@ -177,6 +178,9 @@
         var sp = document.getElementById('spaghetticarbonara');
         sp.addEventListener("mouseover", function() { changeImage('spaghettiCarbonara.jpg'); });
         sp.addEventListener("mouseout", function(){ changeImage('plateLogo2.jpg'); });
+        var sm = document.getElementById('swedishMeatballs');
+        sm.addEventListener("mouseover", function() { changeImage('SwedishMeatballs.jpg'); });
+        sm.addEventListener("mouseout", function(){ changeImage('plateLogo2.jpg'); });
       /* T */
         var tts = document.getElementById('TuscanTortelliniSoup');
         tts.addEventListener("mouseover", function() { changeImage('TuscanTortellini.jpg'); });
