--- a/swedishMeatballs.html
+++ b/swedishMeatballs.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Creamy Tuscan Tortellini Soup</title>
-    <script src="navBarSelector.js"></script>
-    <script src="footer2.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Swedish Meatballs</title>
+    <script src='navBarSelector.js'></script>
+    <script src='footer2.js'></script>
+    <link rel='stylesheet' type='text/css' href='style.css'>
       <style>
 
       </style>
@@ -12,38 +12,35 @@
   </head>
   <body>
     <div class='t1'>
-      <div class='f1'><img src="TuscanTortellini.jpg" alt="A bowl of Tortellini soup" class="picture"></div> 
+      <div class='f1'><img src='SwedishMeatballs.jpg' alt='Swedish Meatballs served with smashed potatos' class='picture'></div> 
       <div class='f2'>
-        <h1>Creamy Tuscan Tortellini Soup</h1>
-        <p>A tasty soup make it bla bla bla        
+        <h1>Swedish Meatballs</h1>
+        <p>  
+           Creamy sauce with warm and chewy meatballs make Swedish Meatballs a perfect comfort food.
+          Swedish Meatballs are great dish because they can be quickly thrown together with frozen meatballs and common kitchen ingredients.
+          They are a great as an appetizers or a quick weeknight dinner.     
         </p>
       </div>
     </div>
       
-
-
       <h2>Ingredients</h2>
-      <ul class="recipe" id="recipe-block-tuscan-tortellini-soup">
+      <ul class='recipe' id='recipe-block-swedish-meatballs'>
+        <li>10-20 Frozen Meatballs</li>
         <li>2 Tbs Butter</li>
-        <li>1 small white onion (sliced)</li>
-        <li>3 cloves garlic (minced)</li>
-        <li>4 Cups Chicken broth</li>
-        <li>1 Large Can (~3.5 cups) diced tomatos </li>
-        <li>1 Can (~2 cups) white beans (drained)</li>
-        <li>1 Cup heavy cream</li>
-        <li>1/4 Cup Parmesan cheese</li>
-        <li>1 Tbsp Italian seasoning</li>
+        <li>2 Tbs Flour</li>
+        <li>2 Cups Beef Broth</li>
+        <li>3 Cloves Garlic (minced)</li>
+        <li>2 Tsp Apple Cider Vineger or Lemon Juice</li>
+        <li>1 Tbs Parsly</li>
+        <li>1 Tsp Ground Pepper</li>
         <li>1 Tsp Kosher Salt</li>
-        <li>1/2 Tsp Ground Pepper</li>
-        <li>2 Cups Chicken (Cooked and Shredded) </li>
-        <li>9 Ounce refrigerated tortellini</li>
-        <li>2 Cups Spinach (Chopped)</li>
+        <li>1/2 Tsp nutmeg</li>
+        <li>1/2 Cup Cream</li>
       </ul>
 
-      <p class="cookInstruct">
-        Melt the butter in a large pot at medium heat. Sautee garlic and onions until tender. Add tomatos, chicken broth, white beans, cream, and Parmesan. 
-        Bring to a simmer. Add Italian seasoning, salt, and pepper. Add Chicken and tortellini, simmer for 10 min to allow the soup to thicken and the tortellini to cook. 
-        Add spinach cook for 1 min. Serve hot and enjoy.  
+      <p class='cookInstruct'>
+        Brown the Meatballs remove from pan and set aside. Melt the butter in a the pan at medium heat and flour and mix until smooth to form a <a href='glossary.html'>roux</a>. Wisk in beef broth to form a sauce.
+        Add garlic, parsly, salt, pepper, vinegar, and meatballs; simmer for 10 min to thicken. Remove from heat and stir in cream. Serve over mashed potatos or rice, with lingonberry jam.  
       </p>
   
     
