--- a/swedishMeatballs.html
+++ b/swedishMeatballs.html
@@ -5,9 +5,7 @@
     <script src='navBarSelector.js'></script>
     <script src='footer2.js'></script>
     <link rel='stylesheet' type='text/css' href='style.css'>
-      <style>
-
-      </style>
+      <style></style>
   
   </head>
   <body>
@@ -43,11 +41,6 @@
         Add garlic, parsly, salt, pepper, vinegar, and meatballs; simmer for 10 min to thicken. Remove from heat and stir in cream. Serve over mashed potatos or rice, with lingonberry jam.  
       </p>
   
-    
-  
   </body>
-
-
-
 
 </html>
