--- a/test.html
+++ b/test.html
@@ -12,18 +12,21 @@
         }
         .navigation-element{
           padding: 8px;
+          padding-left: 20px;
           background-color: #333;
-          text-align: center;
+          text-align: left;
+          font-size: 20px;
         }
-        /*
+        
         .navigation-element a{
           text-decoration: none;
           color: white;
         }
-        */
+        /*
         .navigation-element:hover{
           background-color: #111;
         }
+        */
         body{
           margin: 0;
           padding: 0;
@@ -31,6 +34,7 @@
         .con{
           padding-right: 8px;
         }
+
 
         /* slider styling */
         .switch {position: relative; vertical-align: -2px; display: inline-block; width: 36px; height: 20px; } 
