update styling of toggle switch

--- a/test.html
+++ b/test.html
@@ -35,13 +35,19 @@
           padding-right: 8px;
         }
 
+        .switch input { 
+         opacity: 0;
+          width: 0;
+        height: 0;
+        }
 
         /* slider styling */
         .switch {position: relative; vertical-align: -2px; display: inline-block; width: 36px; height: 20px; } 
-        .slider {position: absolute; cursor: pointer; top: 0; left: 0; right: 0; bottom: 0; background-color: #CCC; transition: .4s; border-radius: 34px;}
+        .slider {position: absolute; cursor: pointer; top: 0; left: 0; right: 0; bottom: 0; background-color: #CCC; transition: .4s; border-radius: 34px; }
         .slider:before {position: absolute; content: ""; height: 16px; width: 16px; left: 2px; bottom: 2px; background-color: white; transition: .4s; border-radius: 50%;}
-        input:checked + .slider { background-color: #2196F3; }
+        input:checked + .slider { background-color: #2196F3; display:}
         input:checked + .slider:before { transform: translateX(16px); }
+        
       
       </style>
     </head>
